--- a/slack-server/package.json
+++ b/slack-server/package.json
@@ -16,7 +16,9 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-3": "^6.24.1",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "eslint-config-airbnb": "^18.2.1",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
