--- a/slack-server/package.json
+++ b/slack-server/package.json
@@ -24,6 +24,7 @@
     "graphql": "^15.5.0",
     "graphql-modules": "^1.4.2",
     "install-peerdeps": "^3.0.3",
+    "lodash": "^4.17.21",
     "nodemon": "^2.0.7",
     "pg": "^8.6.0",
     "sequelize": "^6.6.2"
